<!--
  ~ Copyright (c) 2020
  ~ Project: Geekomatique
  ~ File : strings.xml
  ~ Edited by pinbe
  -->

<resources>
    <string name="app_name">Geekomatique</string>
    <string name="api_url">https://geekomatique.fr:5000</string>
    <string name="copyright">2020 Powered By Lapiei</string>

    <string name="admin_version">Version administrateur</string>
    <string name="login">Nom du compte</string>
    <string name="psswd">Mot de passe</string>
    <string name="connection_butt">Connexion</string>

    <string name="calendar_butt">Gestion des rendez-vous</string>
    <string name="disponibili_butt">Afficher mes disponibilités</string>
    <string name="presta_butt">Modifier mes prestations</string>
    <string name="disconnection">Déconnexion</string>

    <string name="return_butt">Retour</string>


    <string name="lundi">Lundi :</string>
    <string name="mardi">Mardi :</string>
    <string name="mercredi">Mercredi :</string>
    <string name="jeudi">Jeudi :</string>
    <string name="vendredi">Vendredi :</string>
    <string name="samedi">Samedi :</string>

    <string name="dispo">Disponibilités</string>
    <string name="days">Jour :</string>
    <string name="hours">Heures :</string>
    <string name="au">au : </string>
    <string name="à">à :</string>
    <string name="h">h</string>
    <string name="validate_butt">Valider</string>

    <string name="modif_presta">Modifier prestations</string>

    <string name="appointment">Rendez vous : </string>
    <string name="appointment_hour">Heure rendez vous :</string>
    <string name="appointment_adress">Adresse : </string>
    <string name="mail_customer">Mail client : </string>
    <string name="Comment">Commentaire : </string>
    <string name="modify_appointment_butt">Modifier le rendez vous</string>
    <string name="cancel_appointment_butt">Annuler le Rendez Vous</string>
    <string name="send_bill_butt">Envoyer la facture au client</string>

    <string name="new_date">Nouvelle date :</string>
    <string name="new_hour">Nouvelle heure :</string>

    <string name="cancel_reason">Raison annulation</string>

    <string name="enter_login">Entrez votre identifiant</string>
    <string name="enter_passwd">Entrez le mot de passe</string>

    <string name="admin_allowed_only">L\'application est uniquement accessible par les administrateurs de Geekomatique</string>
    <string name="admin_user_text">Gestion des administrateurs</string>
    <string name="adding_admin_user">Ajouter un administrateur</string>
    <string name="edit_admin_user">Modification administrateur</string>

    <string name="adding_presta">Ajouter une prestation</string>
    <string name="prestation_name">Nom de la prestation</string>
    <string name="prestation_price">Prix :</string>
    <string name="money">€</string>

    <string name="suppr_presta">Supprimer</string>
    <string name="validate_appointment">Valider</string>
    <string name="finish_appointment">Terminer</string>

    <string name="company_name">Geekomatique</string>
    <string name="company_country">FR</string>
    <string name="company_city">Rambouillet</string>
    <string name="company_siret">12345967895435</string>
    <string name="company_zipcode">78120</string>
    <string name="company_currency">€</string>
    <string name="company_street">19 rue Chasles</string>
    <string name="company_vat_percent">0</string>
    <string name="company_vat_number"></string>

    <string name="choice_presta">Services ajoutés à la facture</string>
    <string name="choosed_presta">Prestation effectuée :</string>
    <string name="quantity_presta">Quantité :</string>
    <string name="adding_service">Ajouter service</string>
    <string name="validate_invoice">Valider la facture</string>
    <string name="modify_own_info">Modifier mes informations</string>
    <string name="reset_list">Réinitialiser</string>

    <string name="missing_lastName">le nom !</string>
    <string name="missing_firstName">le prénom !</string>
    <string name="missing_phone">le téléphone !</string>
    <string name="missing_mail">le mail !</string>

</resources>
