<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/GeekomatiqueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="622dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SubtitleText"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="533dp"
        android:text="@string/admin_version"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GeekomatiqueText" />

    <Button
        android:id="@+id/CalendarButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="435dp"
        android:onClick="CalendarActivity"
        android:text="@string/calendar_butt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SubtitleText" />

    <Button
        android:id="@+id/DisponibilitiesButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="352dp"
        android:onClick="DisponibilitiesActivity"
        android:text="@string/disponibili_butt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalendarButt" />

    <Button
        android:id="@+id/PrestationsButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="267dp"
        android:onClick="PrestationsActivity"
        android:text="@string/presta_butt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DisponibilitiesButt" />

    <TextView
        android:id="@+id/MailShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="197dp"
        android:text="compte@gmail.com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PrestationsButt" />

    <Button
        android:id="@+id/DeconnectionButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="114dp"
        android:onClick="Disconnect"
        android:text="@string/disconnection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MailShow"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>